# deeplearn

./: .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CONTENT_CREATION_SUMMARY.md  DASHBOARD_METRICS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LEARNING_COACH_UNIT_GENERATION_INVESTIGATION.md  LOGGING_QUICK_SUMMARY.md  QUICKSTART.md  README.md  WORKTREE_CHEATSHEET.md  WORKTREE_README.md  WORKTREE_SETUP.md  format_code.sh  install.sh  learning_app_spec.md  package-lock.json  render.yaml  run_tests.sh  setup_worktree.sh  start.sh
backend/: .pre-commit-config.yaml  ARCHITECTURE.md  CLI_COMPREHENSIVE_GUIDE.md  CLI_USAGE.md  COMBINED_SCRIPT_GUIDE.md  COMPONENT_IMPROVEMENTS_SUMMARY.md  CONTENT_STRATEGY_UPDATE.md  INSPECTION_GUIDE.md  MCQ_SCRIPT_SUMMARY.md  PODCAST_USAGE_GUIDE.md  POSTGRES_MIGRATION_GUIDE.md  README.md  TOPIC_CREATION_GUIDE.md  alembic.ini  check-strategy  check_content_strategy.py  conftest.py  create-topic  create_learning_path.py  create_simple_topic.py  create_single_topic.py  debug_infrastructure.py  debug_llm.py  debug_pytest.py  env.example  generate_bite_sized_content.py  inspect  inspect_bite_sized_content.py  learning_path_report_Comprehensive_Report_Test_20250713_121955.json  mcq-test-results.xml  migrate_sqlite_component_schema.py  migrate_to_postgres.py  pyproject.toml  pytest.ini  pytorch_mcqs.json  quick_inspect.py  requirements.txt  reset_database.py  run_all_tests.py  run_integration_with_logging.py  (+4 more)
backend/alembic/: env.py
backend/docs/: module_dependencies.mmd  worker_deployment.md
backend/modules/: __init__.py  shared_models.py
backend/scripts/: IMPLEMENTATION_SUMMARY.md  README.md  README_INSTRUMENTED.md  SEED_DATA_FORMAT.md  SEED_DATA_REFACTORING.md  create_complete_topic.py  create_lesson.py  create_mcqs.py  create_podcast.py  create_seed_data.py  create_seed_data_from_json.py  create_topic.py  create_topic_and_podcast.py  create_topic_proper.py  create_topic_simple.py  create_unit.py  export_seed_data.py  generate_unit_instrumented.py  remove_empty_dirs.py  reset_database.py  run_integration.py  run_unit.py  squash_migrations.py  start_worker.py  validate_setup.py
backend/seed_data/: MIGRATION_COMPLETE.md  QUICKSTART.md  README.md  users.json
backend/src/: __init__.py  basic_progress_tracker.py  bite_sized_topics.db.backup  conversational_learning.py  data_structures.py  (+8 more)
(+1187 files in other folders)
