[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
target-version = "py311"
line-length = 250
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "alembic/versions/*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "RUF", # Ruff-specific rules,
    "ERA001", # ERA001: Commented-out code should be removed
]
ignore = [
    "B008",   # Allow function calls in argument defaults (FastAPI Depends pattern)
    "S101",   # Use of assert detected (we use asserts in tests)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "T201",
    "RUF001",
    "ANN003",
    "E501",
    "PLR0911",
    "PLR0915",
    "PLR0912",
    "F403",
    "ANN401",
    "E402",
    "S106",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # Don't require type annotations in tests
    "S101",   # Allow asserts in tests
    "PLR2004", # Allow magic values in tests
    "ARG001", # Allow unused function arguments in tests
]
"modules/**/test_*.py" = [
    "ANN",    # Don't require type annotations in tests
    "S101",   # Allow asserts in tests
    "PLR2004", # Allow magic values in tests
    "ARG001", # Allow unused function arguments in tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true  # Ignore all missing imports globally

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "instructor",
    "instructor.*"
]
ignore_missing_imports = true